test: update Java tests for barrier manager action flow
Rewrite BehemothStrategyCoreTest: remove OCO lifecycle tests (horizon
close, sibling cancel, entries paused blocking), add OPEN_MARKET and
CLOSE_MARKET action execution tests. Fix PythonPredictionClientTest for
PredictResponsePayload wrapper. Fix LocalExecutionPortTest for String
side. Fix Stage14ArtifactWriterTest to construct OcoGroupState manually.
Add submitMarketOrder to all ExecutionPort test implementations.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>